--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=ZOipUh4AAAAJ&hl=en&authuser=1"
   email            :
-  researchgate     :
+  researchgate     : "https://www.researchgate.net/profile/Taoran_Ji"
   uri              :
   bitbucket        :
   codepen          :
@@ -101,7 +101,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/taoran-ji-12a028114/"
   orcid            :
   pinterest        :
   soundcloud       :
